--- a/MouseTools/MouseTools.csproj
+++ b/MouseTools/MouseTools.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{F64BE853-1EEC-4ADF-BD03-E0F116472934}</ProjectGuid>
+    <ProjectGuid>{34833DC6-ABFC-4165-B62F-BB1F1B308009}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>MouseLibrary</RootNamespace>
-    <AssemblyName>MouseLibrary</AssemblyName>
+    <RootNamespace>MouseTools</RootNamespace>
+    <AssemblyName>MouseTools</AssemblyName>
     <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -31,6 +31,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -40,11 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Configuration\Conf.cs" />
-    <Compile Include="Configuration\Iaction.cs" />
-    <Compile Include="Configuration\MouseConfiguration.cs" />
-    <Compile Include="Configuration\Wrapper.cs" />
-    <Compile Include="Factory\Builds.cs" />
+    <Compile Include="ConfigurationManager.cs" />
+    <Compile Include="MouseConfiguration.cs" />
+    <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
