--- a/MouseTools/MouseTools.csproj
+++ b/MouseTools/MouseTools.csproj
@@ -45,6 +45,8 @@
     <Compile Include="MouseConfiguration.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ToolsTree.cs" />
+    <Compile Include="Wrapper.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
