--- a/unitTest/App.config
+++ b/unitTest/App.config
@@ -2,6 +2,6 @@
 <configuration>
   <appSettings>
     <add key="log" value="C:\Users\Gabriel\Documents\DesignPaternDocument\"/>
-    <add key="file" value="C:\Users\Gabriel\Documents\DesignPaternDocument\map.txt"/>
+    <add key="file" value="C:\Users\Gabriel\Documents\DesignPaternDocument\map2.txt"/>
   </appSettings>
 </configuration>
