--- a/MouseTools/MouseTools.csproj
+++ b/MouseTools/MouseTools.csproj
@@ -42,9 +42,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ConfigurationManager.cs" />
+    <Compile Include="Strategy\ChoiceNodeDirection.cs" />
+    <Compile Include="Strategy\Down.cs" />
+    <Compile Include="Strategy\IgetNode.cs" />
     <Compile Include="MouseConfiguration.cs" />
     <Compile Include="Node.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Strategy\Left.cs" />
+    <Compile Include="Strategy\Right.cs" />
+    <Compile Include="Strategy\Top.cs" />
     <Compile Include="ToolsTree.cs" />
     <Compile Include="Wrapper.cs" />
   </ItemGroup>
