finish to manage the error now i need to create the pattern command

--- a/MouseTools/MouseTools.csproj
+++ b/MouseTools/MouseTools.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Observor\ErrorLogFile.cs" />
     <Compile Include="Observor\Observer.cs" />
     <Compile Include="Observor\Subject.cs" />
+    <Compile Include="Observor\WrapperObserver.cs" />
     <Compile Include="Strategy\ChoiceNodeDirection.cs" />
     <Compile Include="Strategy\Down.cs" />
     <Compile Include="Strategy\IgetNode.cs" />
