Factory and AbstractTowerMob on Node

--- a/TowerDefense/App.config
+++ b/TowerDefense/App.config
@@ -7,5 +7,7 @@
         <add key="map" value="E:\TowerDefense\TowerDefense\mapConf.txt"/>
         <add key="file" value="E:\TowerDefense\TowerDefense\mapConf.txt"/>
         <add key="nbLifes" value="4"/>
+        <add key="nbMobs" value="4"/>
+        <add key="typeMobs" value="loup"/>
     </appSettings>
 </configuration>
