--- a/GlobalGame/App.config
+++ b/GlobalGame/App.config
@@ -4,7 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <appSettings>
-      <add key="nom" value="lapert"/>
-      <add key="prenom" value="christian"/>
+      <add key="lignes" value="C:\Users\HP 750-240nf\Desktop\MetroCode 2\MetroWPF\bin\Debug\lignes.data"/>
+      <add key="stations" value="C:\Users\HP 750-240nf\Desktop\MetroCode 2\MetroWPF\bin\Debug\stations.data"/>
     </appSettings>
 </configuration>
