--- a/MetroLib/MetroLib.csproj
+++ b/MetroLib/MetroLib.csproj
@@ -39,15 +39,20 @@
     <None Include="ClassDiagram1.cd" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Factory\Arc.cs" />
+    <Compile Include="Composant\Arc.cs" />
     <Compile Include="Chemin.cs" />
-    <Compile Include="Factory\ElementGraphe.cs" />
-    <Compile Include="Factory\Graphe.cs" />
+    <Compile Include="Composant\ElementGraphe.cs" />
+    <Compile Include="Composant\Graphe.cs" />
     <Compile Include="Ligne.cs" />
     <Compile Include="ManagerPlan.cs" />
-    <Compile Include="Factory\Noeud.cs" />
+    <Compile Include="Composant\Noeud.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Station.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Reference Include="System.Configuration">
+      <HintPath>..\..\..\..\..\Program Files (x86)\Reference Assemblies\Microsoft\Framework\.NETFramework\v4.5.2\System.Configuration.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\Microsoft\Portable\$(TargetFrameworkVersion)\Microsoft.Portable.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
