--- a/MetroWPF/App.config
+++ b/MetroWPF/App.config
@@ -4,7 +4,10 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" />
     </startup>
     <appSettings>
-      <add key="nom" value="lapert"/>
-      <add key="prenom" value="christian"/>
+      <add key="fichierLignes" value="lignes.data"/>
+      <add key="sourceLignes" value="C:\Users\HP 750-240nf\Desktop\MetroCode 2\MetroWPF\bin\Debug\"/>
+      <add key="fichierStations" value="stations.data"/>
+      <add key="sourceStations" value="C:\Users\HP 750-240nf\Desktop\MetroCode 2\MetroWPF\bin\Debug\"/>
+      <add key="sourceLog" value="C:\Users\HP 750-240nf\Desktop\MetroCode 2\MetroWPF\bin\Debug\Data\Log"/>
     </appSettings>
 </configuration>
