--- a/TowerDefense/TowerDefense.csproj
+++ b/TowerDefense/TowerDefense.csproj
@@ -57,6 +57,7 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="Classes\AbstractTowerMob.cs" />
+    <Compile Include="Classes\MobPath.cs" />
     <Compile Include="Classes\NodeTowerMob.cs" />
     <Compile Include="Classes\TowerDefense.cs" />
     <Compile Include="Configuration\TowerDefenseConfiguration.cs" />
