Ajout mort mob et diminution de vie

--- a/TowerDefense/App.config
+++ b/TowerDefense/App.config
@@ -8,5 +8,6 @@
         <add key="nbLifes" value="4"/>
         <add key="nbMobs" value="4"/>
         <add key="typeMobs" value="loup"/>
+        <add key ="vieMob" value="50"/>
     </appSettings>
 </configuration>
